--- a/shoppinglist/requirements.txt
+++ b/shoppinglist/requirements.txt
@@ -3,6 +3,7 @@ Django==1.10.5
 google-api-python-client==1.6.2
 httplib2==0.10.3
 jsonpickle==0.9.4
+MySQL-python==1.2.5
 oauth2client==4.0.0
 packaging==16.8
 pyasn1==0.2.2
